--- a/package.json
+++ b/package.json
@@ -19,15 +19,14 @@
   },
   "homepage": "https://github.com/fzhao888/Little-Chef#readme",
   "dependencies": {
-    "axios": "^1.4.0",
-    "bcrypt": "^5.0.0",
-    "body-parser": "^1.20.2",
+    "bcrypt": "^5.0.0", 
     "connect-session-sequelize": "^7.0.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "express-recaptcha": "^5.1.0",
     "express-session": "^1.17.1",
+    "handlebars": "^4.7.8",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
   },
